--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,5 @@
     <string name="name">Name</string>
     <string name="place_order">Place Order</string>
     <string name="add_to_cart_button">Add to cart</string>
+    <string name="face">Face</string>
 </resources>
