--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,5 @@
     <string name="add_to_cart_button">Add to cart</string>
     <string name="face">Face</string>
     <string name="checkout_text">Your order has been recieved! \n Thank You!</string>
+    <string name="empty_wishlist">There\'s nothing here! :(  \n Tip: Add new items to your wishlist :)</string>
 </resources>
