--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,10 +2,10 @@
     <string name="app_name">Beauty Stop</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="email">email</string>
-    <string name="password">password</string>
-    <string name="register">register</string>
-    <string name="login">login</string>
+    <string name="email">Email</string>
+    <string name="password">Password</string>
+    <string name="register">Register</string>
+    <string name="login">Login</string>
     <string name="title_activity_login">LoginActivity</string>
     <!-- Strings used for fragments for navigation -->
     <string name="first_fragment_label">First Fragment</string>
@@ -30,11 +30,13 @@
     <string name="empty">your bag is empty. \n 💌 add products to your shopping bag.</string>
     <string name="required">required</string>
     <string name="order_details">order details</string>
-
+    <string name="Website"><u>Brand Website</u></string>
+    <string name="null_price">10$</string>
 
     <string-array name="rangeSliderValues">
-        <item>20</item>
-        <item>70</item>
+        <item>0</item>
+        <item>100</item>
     </string-array>
+
 
 </resources>
