--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,8 +15,8 @@
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
-    <string name="log_out">Log out</string>
-    <string name="brand">Brand</string>
+    <string name="log_out">Logout</string>
+    <string name="brand">Brand Name:</string>
     <string name="price">Price</string>
     <string name="buy_from_website">Buy From Website</string>
     <string name="colors">Colors</string>
